www/style.css
/*
 * Base Tag Formatting
 */

html, body {
  margin: 2vw 2vw 2vw 2vw;
  background-color: #fff;
  padding: 2vw 2vw 2vw 2vw;
}

.logo-desc {
  width: 100%;
  text-align: center;
}

.navbar-brand{
  
}

.logo-div {
  width: 50%;
  float: left;
  justify-content: center;
  display: flex;
}

.desc {
  margin-left: 50%;
}

.my-p {
  padding: 2vw 2vw 2vw 2vw;
  font-size: 1.5em;
}

.my-p-input_1 {
  font-size: 1.2em;
}

.my-p-input_2 {
  font-size: 1.0em;
}
h1{
  font-size: 5em;
}

h2{
  font-size: 4em;
  text-align: center;
}

h3{
  font-size: 3em;
}

h4{
  font-size: 2.5em;
}


.cosia-workflow {
  width: 60vw;
}

.logo {
   width: 25vw;
}

.pop-logo {
   width: 10vw
}

.modal-title {
  text-align: center;
}

.my-list {
  
  font-size: 1.5em;
}

.my-list-inputs {
  font-size: 0.9em;
}

.use-cosia {
  
}

.conversion-tips {
  padding: 0vw 7vw 0vw 7vw;
}

.plotting-tips {
  padding: 0vw 7vw 0vw 7vw;
}

.branding {
  
  font-size: .8em;
  
  text-align: center;
}

